objects/Project_Contact__c.object
<CustomObject>
    <description>This object will track contacts associated with this project.</description>
    <fields>
        <fullName>City_State__c</fullName>
        <description>This field will indicate the city/state this contact works in.</description>
        <inlineHelpText>This field will indicate the city/state this contact works in.</inlineHelpText>
        <label>City/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Location__c</fullName>
        <description>This field will identify the location of the contact.</description>
        <inlineHelpText>This field will identify the location of the contact.</inlineHelpText>
        <label>Contact Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field will indicate the department this contact works in.</description>
        <inlineHelpText>This field will indicate the department this contact works in.</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desk_Phone__c</fullName>
        <formula>Project_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desk Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Project_Contact__r.Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Project_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <formula>TEXT(Project_Contact__r.Preferred_Commuciation_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Communication Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Contact_Email__c</fullName>
        <formula>Project_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Contact_Title__c</fullName>
        <description>This field will track the contact&apos;s title.</description>
        <formula>Project_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will track the contact&apos;s title.</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <label>Project Tracking</label>
        <referenceTo>Project_Management__c</referenceTo>
        <relationshipLabel>Project Contact</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <description>This field will identify the role of the contact in the project.</description>
        <inlineHelpText>Please enter a role for the project contact.</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <description>This field will indicate the contact&apos;s direct report.</description>
        <inlineHelpText>This field will indicate the contact&apos;s direct report.</inlineHelpText>
        <label>Reports To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>This field will indicate the contact&apos;s preferred Salutation.</description>
        <inlineHelpText>This field will indicate the contact&apos;s preferred Salutation.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <formula>Project_Contact__r.Time_Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <label>Project Contact</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>